# AI-Assistant-for-Excel

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  ADDING_ACTIONS.md  AIRGAP.md  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  README.md  SECURITY_CHECKLIST.md  docker-compose.yml
backend/: .env.example  main.py  mcp_server.py  pyproject.toml  requirements.txt
backend/app/: config.py  db.py
backend/app/execution/: __init__.py  base.py  capability_registry.py  range_utils.py  snapshot.py  xlwings_bridge.py
backend/app/models/: analytical_plan.py  chat.py  plan.py  request.py  tool_output.py
backend/app/orchestrator/: __init__.py  execution_context.py  orchestrator.py  validators.py
backend/app/persistence/: __init__.py  base.py  embedding.py  factory.py  vector_chroma.py  vector_pgvector.py
backend/app/planner/: __init__.py  planner.py  schema.py
backend/app/prompts/: planner_system.txt  validator_system.txt
backend/app/routers/: analyze.py  chat.py  conversations.py  feedback.py  plan.py  stream.py
backend/app/services/: capability_store.py  llm_client.py  (+8 more)
backend/examples/: chart_creation_plan.json  cleanup_plan.json  match_and_sum_plan.json
backend/models/: README.md
backend/scripts/: check_llm_connectivity.py  download_embedding_model.py  export_finetune_dataset.py  migrate_db.py
backend/tests/: test_analytical_planner.py  test_chat_service.py  test_infrastructure_improvements.py  test_matching_tools.py  test_orchestrator.py  test_parse_utilities.py  test_persistence_pgvector.py  test_plan_validation.py  test_planner.py
(+270 files in other folders)
